tests/code/pages/errors/max-run-time.tht

System.setMaxRunTimeSecs(2)

// Note: PHP ignores `sleep` when measuring execution time
loop {
    if false: break
}

